# django-template

./: .dockerignore  .env.copy  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Pipfile  README.md  docker-compose.yaml  entrypoint.sh  makefile  manage.py  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: main.yml
config/: settings.py  wsgi.py
config/settings/: base.py  dev.py  prod.py
staticfiles/: staticfiles.json
templates/base/: base.html
users/: admin.py  forms.py  models.py  tests.py
users/migrations/: 0001_initial.py
